--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,33 @@
   background-color: hsl(26, 100%, 55%);
   
 }
+
+#discount{
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+}
+#counter{
+display: flex;
+height: 20%;
+width:30%;
+background-color: hsl(220, 14%, 75%);
+justify-content: space-evenly;
+align-items: center;
+border-radius: 5px;
+opacity: 60%;
+}
+
+.count{
+  width: 10px;
+}
+
+#orginalAmount{
+  text-decoration: line-through;
+  font-weight: 100;
+}
+
+.child3{
+  display: flex;
+  justify-content:space-evenly;
+}
