--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root{
+#root {
   width: 100vw;
   height: 100vh;
   background-color: black;
@@ -7,40 +7,40 @@
   align-items: center;
 }
 
-.maindiv{
+.maindiv {
   background-color: white;
   width: 70%;
   height: 90%;
 }
 
-.firsDiv{
+.firsDiv {
   display: flex;
   justify-content: space-between;
   margin-left: 8%;
   height: 18%;
-  
 }
-.child1{
+.child1 {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   width: 50%;
-
 }
-#line{
+#line {
   width: 48%;
   margin-bottom: 2%;
+  margin-left: 15%;
 }
 
-#logoId{
+#logoId {
   height: 20%;
   width: 18%;
+  margin-top: 4.5%;
 }
 
-#avatar1{
+#avatar1 {
   height: 43px;
 }
-.child2{
+.child2 {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -48,24 +48,22 @@
   width: 10%;
 }
 
-.secondDiv{
-  display:flex;
+.secondDiv {
+  display: flex;
   width: 100%;
-
 }
 
-#prd1{
+#prd1 {
   height: 95%;
   width: 80%;
   border-radius: 10px;
-
 }
 
-#products{
+#products {
   margin-left: 15%;
-  width: 50% ;
+  width: 50%;
 }
-#productsThumbnail{
+#productsThumbnail {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -73,63 +71,59 @@
   width: 60%;
 }
 
-.thumbnail{
+.thumbnail {
   width: 15%;
   border-radius: 5px;
 }
 
-.productDetails{
+.productDetails {
   width: 50%;
   margin-right: 10%;
   z-index: 1;
 }
-#cart{
+#cart {
   width: 50%;
   background-color: hsl(26, 100%, 55%);
-  
 }
 
-#discount{
+#discount {
   background-color: black;
   color: white;
   border-radius: 5px;
 }
-#counter{
-display: flex;
-height: 44px;
-width:30%;
-background-color: hsl(220, 14%, 75%);
-justify-content: space-evenly;
-align-items: center;
-border-radius: 5px;
-opacity: 60%;
+#counter {
+  display: flex;
+  height: 44px;
+  width: 30%;
+  background-color: hsl(220, 14%, 75%);
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 5px;
+  opacity: 60%;
 }
 
-.count{
+.count {
   width: 10px;
 }
 
-#orginalAmount{
+#orginalAmount {
   text-decoration: line-through;
   font-weight: 100;
 }
 
-.child3{
+.child3 {
   display: flex;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
 }
 
-
-
-#countCart{
+#countCart {
   color: hsl(26, 100%, 55%);
   margin-top: -8px;
   display: inline-block;
   border-radius: 5px;
-  margin-left:-5%;
-
+  margin-left: -5%;
 }
-.cartDetails{
+.cartDetails {
   position: absolute;
   margin-top: 1rem;
   width: 15%;
@@ -140,25 +134,117 @@ opacity: 60%;
   z-index: 4;
   background-color: hsl(0, 0%, 100%);
 }
-#thumbimg{
+#thumbimg {
   width: 15%;
   border-radius: 8px;
- margin-bottom: -10%;
- margin-left: 2px;
-
+  margin-bottom: -10%;
+  margin-left: 2px;
 }
-#checkout{
+#checkout {
   margin-top: -10%;
   margin-left: 5%;
   margin-bottom: 2%;
   width: 90%;
   background-color: hsl(26, 100%, 55%);
 }
-.pdetails{
+.pdetails {
   display: flex;
   flex-direction: column;
   height: 50%;
 }
-#cal{
+#cal {
   margin-left: 15%;
 }
+#collection:hover {
+  text-decoration-line: underline;
+  text-decoration-color: hsl(26, 100%, 55%);
+  text-decoration-thickness: 3px;
+}
+#men:hover {
+  text-decoration-line: underline;
+  text-decoration-color: hsl(26, 100%, 55%);
+  text-decoration-thickness: 3px;
+}
+#women:hover {
+  text-decoration-line: underline;
+  text-decoration-color: hsl(26, 100%, 55%);
+  text-decoration-thickness: 3px;
+}
+#About:hover {
+  text-decoration-line: underline;
+  text-decoration-color: hsl(26, 100%, 55%);
+  text-decoration-thickness: 3px;
+}
+#Contact:hover {
+  text-decoration-line: underline;
+  text-decoration-color: hsl(26, 100%, 55%);
+  text-decoration-thickness: 3px;
+}
+/* popUp */
+.modal {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #ffff;
+  z-index: 2;
+  overflow: auto;
+  opacity: 0;
+  pointer-events: none;
+}
+
+  .modal.appear {
+    opacity: 1;
+    pointer-events: all;
+  }
+
+  .modalContent {
+    min-height: 100vh;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modalImg{
+    width: 50%;
+    max-width: 700px;
+    border-radius: 30px;
+  }
+  .left{
+    margin-top: 15px;
+    transform: rotate(180deg);
+    margin-left: 15px;
+  }
+  .leftarrow{
+    display: inline-block;
+    background-color: #ffff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    margin-left: -32%;
+  }
+  .right{
+    margin-top: 15px;
+    margin-left: 15px;
+  }
+
+  .rightarrow{
+    display: inline-block;
+    background-color: #ffff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    margin-right: -32%;  
+  }
+  .close{
+    margin-left: 65%;
+    position: absolute;
+    margin-top: 2%;
+    font-size: x-large;
+    cursor: pointer;
+  }
