--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@
 }
 
 #products {
+  
   margin-left: 15%;
   width: 50%;
 }
@@ -81,6 +82,7 @@
   width: 50%;
   margin-right: 10%;
   z-index: 1;
+ margin-bottom: 10px;
 }
 #cart {
   width: 50%;
